<resources>
    <string name="app_name">Organizador de tarefas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_button_title">Cadastro Atividade</string>
    <string name="atividade_spinner">Atividade</string>
    <string name="Importancia_seek">Importância</string>
    <string name="data_inicial">Hora Inicial</string>
    <string name="data_final">Hora Final</string>
    <string name="nome_atividade">Nome da Atividade</string>
    <string name="done">Confirmar</string>
    <string name="confirmar">Confirmar</string>
    <string name="atividades_na_dia_feira">Atividades na (dia)-Feira</string>
    <string name="adicionar">Adicionar</string>
    <string name="segunda">Segunda:</string>
    <string name="terca">Terça:</string>
    <string name="quarta">Quarta:</string>
    <string name="quinta">Quinta:</string>
    <string name="sexta">Sexta:</string>
    <string name="segundafeira">Segunda-Feira</string>
    <string name="tercafeira">Terça-Feira</string>
    <string name="quartafeira">Quarta-Feira</string>
    <string name="quintafeira">Quinta-Feira</string>
    <string name="sextafeira">Sexta-Feira</string>
    <string name="salvar">Salvar</string>
    <string name="pick_time">test</string>
    <string name="definir_hora_inicial">Definir Hora Inicial</string>
    <string name="definir_hora_final">Definir Hora Final</string>
    <string name="prioridade">Prioridade:</string>
</resources>
